# DeamerExternal

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: Deamer_ExternalConfig.cmake.in
docs/: CMakeLists.txt
lib/: CMakeLists.txt
tests/: CMakeLists.txt
